--- a/style.css
+++ b/style.css
@@ -5,12 +5,15 @@
 
 *{
     font-family: 'Roboto', sans-serif;
+    color: black;
+    transition: color 1s;
 }
 
 body{
     background-color: white;
     max-width: 660px;
     margin: auto;
+    transition: background-color 1s;
 }
 
 #container{
@@ -27,11 +30,14 @@ body{
 @media (prefers-color-scheme: dark) {
     body{
         background-color: #1f1f1f;
+        transition: background-color 1s;
     }
     h1{
         color: #d5d5d5;
+        transition: color 1s;
     }
     *{
         color: white;
+        transition: color 1s;
     }
 }
